Dockerfile syntax hl for vim, bell character handling
Also, do not autofold C functions. It may have seemed handy, but it's
rather cumbersome. If your code needs folding, you should really
rethink its structure.

Dockerfile syntax hl is added because the Ubuntu version of vim does not
seem to have it included.

--- a/.local/src/xor/README
+++ b/.local/src/xor/README
@@ -12,7 +12,7 @@ DESCRIPTION
 	(swap all the bits).
 
 EXAMPLE
-	xor keyfile < my_porn_collection.tgz > my_scrambled_porn_collection_muahaha
+	xor KEYFILE < my_porn_collection.tgz > my_scrambled_porn_collection_muahaha
 
 SECURITY
 	XOR is not a replacement for security/encryption systems like RSA. The
