etc/tmux: Distinguish for 1.9 change as well
Let's give Centos 7 another chance, folks!

--- a/etc/tmux/post2.1
+++ b/etc/tmux/post2.1
@@ -1,4 +1,7 @@
+# TERM inside tmux:
 set -g default-terminal "tmux-256color"
+
+# Mouse integration (scrolling):
 set -g mouse on
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t= \;                 send-keys -M
